Fixing light and dark mode switch

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,20 @@
   text-align: center;
 }
 
+@keyframes blink {
+  50% { opacity: 0 }
+}
+
+.cursor-blink {
+  animation: blink 1s step-end infinite;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+
+body {
+  font-feature-settings: 'calt' 1, 'ss01' 1;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
