--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@keyframes blink {
+  50% { opacity: 0 }
+}
+
+.cursor-blink {
+  animation: blink 1s step-end infinite;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
